added set-attacker-on-combat to config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,5 +6,6 @@ enable-in-creative: false # Whether to enable combat logging in creative mode
 
 retaliationattack: false # Enable combat tag only on retaliation attacks
 retaliationattack-duration: 10 # Duration in seconds for retaliation attack window (only if retaliationattack is true)
+set-attacker-on-combat: true # Whether to set the attacker as in combat when they hit another player (only if retaliationattack is true)
 
 allow-portal-teleport: false # Whether to allow teleporting via portals while in combat
