--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,3 +9,9 @@ retaliationattack-duration: 10 # Duration in seconds for retaliation attack wind
 set-attacker-on-combat: true # Whether to set the attacker as in combat when they hit another player (only if retaliationattack is true)
 
 allow-portal-teleport: false # Whether to allow teleporting via portals while in combat
+
+blocked-commands: #List of commands that are disabled during combat (without slash)
+  - "home"
+  - "spawn"
+  - "warp"
+  - "tpa"
